# aimnetcentral

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
aimnet/: base.py  cli.py  config.py  constants.py  nbops.py  ops.py
aimnet/calculators/: __init__.py  aimnet2ase.py  aimnet2pysis.py  calculator.py  model_registry.py  model_registry.yaml  model_zoo.py  nb_kernel_cpu.py  nb_kernel_cuda.py  nbmat.py
aimnet/data/: __init__.py  sgdataset.py
aimnet/models/: __init__.py  aimnet2.py  aimnet2.yaml  aimnet2_dftd3_wb97m.yaml  base.py
aimnet/modules/: __init__.py  aev.py  core.py  lr.py
aimnet/train/: calc_sae.py  default_train.yaml  loss.py  metrics.py  pt2jpt.py  train.py  utils.py
docs/: index.md  train.md
examples/: 2019828.cif  ase_opt.py  ase_opt_pbc.py  taxol.xyz
scripts/compile/: compile_off.py  compile_off.yaml
tests/: test_ase.py  test_calculator.py  test_dataset.py  test_model.py  test_nbmat.py
tests/data/: caffeine.xyz  dataset.h5
